Fixed some contrast issues and image sizes

--- a/src/ReusableComponents/ImageElements/image.css
+++ b/src/ReusableComponents/ImageElements/image.css
@@ -37,30 +37,30 @@
     width: 100%;
     position: relative;
     z-index: 2;
-    bottom: -31px
+    bottom: -31px;
 }
 
 /* ------------ MEDIA QUERIES ------------ */
 /* ------------ Tablet only ------------ */
 @media (max-width: 1279px) and (min-width: 744px) {
-    .wave-divider {
-        width: 100%;
-    }
-
     .arrow-divider {
         padding: 128px 64px 64px 64px;
     }
 
-    .square-img {
+    .wave-divider {
         width: 100%;
-        height: 100%;
+    }
+
+    .square-img {
+        max-width: 100%;
+        height: 280px;
         flex: 1;
         /* Take up all available vertical space within the article */
     }
 
     .rectangle-img {
         width: 100%;
-        max-height: 680px;
+        max-height: 340px;
     }
 }
 
@@ -68,6 +68,10 @@
 @media (min-width: 1280px) {
     .arrow-divider {
         padding: 199px 220px 64px 220px;
+    }
+
+    .wave-divider {
+        width: 200vw;
     }
 
     .square-img {
