--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 :root {
   /* Colors */
   --primary: #0B24F5;
-  --secondary: #FF4575;
+  --secondary: #ff386a;
+  /* I changed my pink color to one that has better contrast than the one in the sketch (#FF4575) */
   --light-secondary: #FFECEA;
   --btn-gray: #F5F5F5;
   --btn-text: #333;
